--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,39 @@
   </head>
   <body class="page__body">
     <header class="page__section header grid grid--widescreen">
-      <div class="grid__item header__wrap grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-12">
+      <div
+      class="
+      grid__item
+      header__wrap
+      grid__item--1-2
+      grid__item--Tablet-1-6
+      grid__item--Desktop-1-12"
+      >
         <div class="header__bg">
           <a href="#menu" class="header__menu"></a>
-          <a href="#" class="header__logo">NA <br> MU</a>
+
+          <a href="#" class="header__logo">
+            NA <br> MU
+          </a>
         </div>
 
         <div class="header__content">
           <a href="#menu" class="header__menu header__menu--tablet"></a>
-          <h1 class="header__content-title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-          <a href="#podii" class="header__content-button">Квитки</a>
+          <h1 class="header__content-title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+
+          <a href="#podii" class="header__content-button">
+            Квитки
+          </a>
 
           <div class="header__content-element">
             <div class="header__content-element--line"></div>
-            <a class="header__content-element--link" href="#podii">ПОДІЇ</a>
+
+            <a class="header__content-element--link" href="#podii">
+              ПОДІЇ
+            </a>
           </div>
 
         </div>
@@ -40,19 +58,33 @@
 
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#podii" class="menu__link">Події</a>
+              <a href="#podii" class="menu__link">
+                Події
+              </a>
             </li>
+
             <li class="menu__item">
-              <a href="#gallery" class="menu__link">Галерея</a>
+              <a href="#gallery" class="menu__link">
+                Галерея
+              </a>
             </li>
+
             <li class="menu__item">
-              <a href="#subscribe" class="menu__link">Підписка</a>
+              <a href="#subscribe" class="menu__link">
+                Підписка
+              </a>
             </li>
+
             <li class="menu__item">
-              <a href="#contacts" class="menu__link">Контакти</a>
+              <a href="#contacts" class="menu__link">
+                Контакти
+              </a>
             </li>
           </ul>
-          <a href="#" class="menu__logo">NA <br> MU</a>
+
+          <a href="#" class="menu__logo">
+            NA <br> MU
+          </a>
         </div>
       </div>
     </div>
@@ -61,17 +93,34 @@
       <div class="page__section podii" id="podii">
         <div class="wrap">
           <div class="grid">
-            <div class="podii__title grid__item--1-2 grid__item--Tablet-1-4 grid__item--Desktop-1-5">Актуальні
+            <div
+            class="podii__title
+            grid__item--1-2
+            grid__item--Tablet-1-4
+            grid__item--Desktop-1-5"
+            >
+              Актуальні
               події
             </div>
-            <div class="podii__image grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-7">
+
+            <div
+            class="podii__image
+            grid__item--1-2
+            grid__item--Tablet-1-6
+            grid__item--Desktop-1-7"
+            >
               <img
               class="podii__image--item"
               src="images/podii1.jpg"
               alt="podii1"
               >
             </div>
-            <div class="podii__content grid__item--1-2 grid__item--Tablet-1-4 grid__item--Desktop-9-12">
+
+            <div class="podii__content
+            grid__item--1-2
+            grid__item--Tablet-1-4
+            grid__item--Desktop-9-12"
+            >
               <div class="podii__content-info">
                 <h3 class="podii__content-subtitle">
                   ВИСТАВКА
@@ -81,22 +130,36 @@
                   26.08-29.11.2019
                 </h3>
               </div>
-              <h2 class="podii__content-title">Йду і повертаюсь
+
+              <h2 class="podii__content-title">
+                Йду і повертаюсь
               </h2>
+
               <p class="podii__content-text">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
               </p>
 
             </div>
 
-            <div class="podii__image grid__item--1-2 grid__item--Tablet-1-6 grid__item--Desktop-1-7">
+            <div
+            class="podii__image
+            grid__item--1-2
+            grid__item--Tablet-1-6
+            grid__item--Desktop-1-7"
+            >
               <img
               class="podii__image--item"
               src="images/podii2.jpg"
               alt="podii2"
               >
             </div>
-            <div class="podii__content grid__item--1-2 grid__item--Tablet-1-4 grid__item--Desktop-9-12">
+
+            <div
+            class="podii__content
+            grid__item--1-2
+            grid__item--Tablet-1-4
+            grid__item--Desktop-9-12"
+            >
               <div class="podii__content-info">
                 <h3 class="podii__content-subtitle">
                   ВИСТАВКА
@@ -106,8 +169,11 @@
                   26.08-29.11.2019
                 </h3>
               </div>
-              <h2 class="podii__content-title">І спогади і мрії
+
+              <h2 class="podii__content-title">
+                І спогади і мрії
               </h2>
+
               <p class="podii__content-text">
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
@@ -127,7 +193,9 @@
                 26.08-29.11.2019
               </h3>
             </div>
-            <h2 class="podii__block-title">Від класицизму до романтизму
+
+            <h2 class="podii__block-title">
+              Від класицизму до романтизму
             </h2>
           </div>
         </div>
@@ -135,7 +203,9 @@
 
       <div class="page__section gallery" id="gallery">
         <div class="wrap">
-          <h2 class="gallery__title">Галерея</h2>
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
 
           <div class="gallery__slider slider">
             <div class="slider__slides">
@@ -168,7 +238,10 @@
               id="r4"
               >
 
-              <div class="slider__slide slider__slide-s1">
+              <div
+              class="slider__slide
+              slider__slide-s1"
+              >
                 <div class="slider__slide-image slider__slide-image-1"></div>
               </div>
 
@@ -198,21 +271,38 @@
 
 
           <div class="gallery__slider--desktop grid">
-            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-1 grid__item--Desktop-1-5"></div>
+            <div
+            class="gallery__slider-item--Desktop
+            gallery__slider-item--Desktop-1
+            grid__item--Desktop-1-5"
+            ></div>
 
-            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-2 grid__item--Desktop-6-12"></div>
+            <div class="gallery__slider-item--Desktop
+            gallery__slider-item--Desktop-2
+            grid__item--Desktop-6-12"
+            ></div>
 
-            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-3 grid__item--Desktop-1-8"></div>
+            <div class="gallery__slider-item--Desktop
+            gallery__slider-item--Desktop-3
+            grid__item--Desktop-1-8"
+            ></div>
 
-            <div class="gallery__slider-item--Desktop gallery__slider-item--Desktop-4 grid__item--Desktop-9-12"></div>
+            <div class="gallery__slider-item--Desktop
+            gallery__slider-item--Desktop-4
+            grid__item--Desktop-9-12"
+            ></div>
           </div>
         </div>
       </div>
 
       <div class="page__section subscribe" id="subscribe">
-        <h2 class="subscribe__title">Підписка</h2>
+        <h2 class="subscribe__title">
+          Підписка
+        </h2>
 
-        <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
 
         <div class="subscribe__button">
           <form
@@ -244,8 +334,14 @@
     <footer class="page__section footer" id="contacts">
       <div class="wrap">
         <div class="footer__content grid">
-          <div class="footer__logo-container grid__item--1-2 grid__item--Tablet-1-1 grid__item--Desktop-1-1">
-            <a href="#" class="footer__logo">NA <br> MU</a>
+          <div class="footer__logo-container
+          grid__item--1-2
+          grid__item--Tablet-1-1
+          grid__item--Desktop-1-1"
+          >
+            <a href="#" class="footer__logo">
+              NA <br> MU
+            </a>
 
             <div class="footer__icons-container">
               <a
@@ -253,20 +349,24 @@
               target="_blank"
               href="https://www.facebook.com/namu.museum/"
               ></a>
+
               <a
               class="footer__icon footer__icon--inst"
               target="_blank"
               href="https://www.instagram.com/namu.museum/?hl=en"
               ></a>
             </div>
-
-
           </div>
 
-          <div class="footer__info-container grid__item--1-2 grid__item--Tablet-2-5 grid__item--Desktop-3-6">
+          <div class="footer__info-container
+          grid__item--1-2
+          grid__item--Tablet-2-5
+          grid__item--Desktop-3-6"
+          >
             <div class="footer__info-content">
               <div class="footer__info-block">
                 <h3 class="footer__info-text">Графік роботи</h3>
+
                 <ul class="footer__info-scedule">
                   <li class="footer__info-scedule--item">
                     <span class="footer__info-scedule--item-bold">
@@ -274,24 +374,28 @@
                     </span>
                     середа
                   </li>
+
                   <li class="footer__info-scedule--item">
                     <span class="footer__info-scedule--item-bold">
                       12:00 — 20:00
                     </span>
                     четвер
                   </li>
+
                   <li class="footer__info-scedule--item">
                     <span class="footer__info-scedule--item-bold">
                       12:00 — 20:00
                     </span>
                     п’ятниця
                   </li>
+
                   <li class="footer__info-scedule--item">
                     <span class="footer__info-scedule--item-bold">
                       12:00 — 19:00
                     </span>
                     субота
                   </li>
+
                   <li class="footer__info-scedule--item">
                     <span class="footer__info-scedule--item-bold">
                       12:00 — 19:00
@@ -299,10 +403,13 @@
                     неділя
                   </li>
                 </ul>
+
                 <p class="footer__info-nwh">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
               </div>
+
               <div class="footer__info-block">
                 <h3 class="footer__info-text">Контакти</h3>
+
                 <p class="footer__info-nwh">
                   <a
                   href="https://goo.gl/maps/PKXeYT3yAYgLjicR8"
@@ -328,21 +435,36 @@
                 </p>
               </div>
             </div>
+
             <a href="#" class="footer__button"></a>
           </div>
 
-          <div class="nav footer__nav-block grid__item--1-1 grid__item--Tablet-2-3 grid__item--Desktop-8-9">
+          <div class="nav
+          footer__nav-block
+          grid__item--1-1
+          grid__item--Tablet-2-3
+          grid__item--Desktop-8-9"
+          >
             <a href="#gallery" class="nav__link">Галерея</a>
+
             <a href="#podii" class="nav__link">Виставки та події</a>
           </div>
 
-          <div class="nav footer__nav-block grid__item--2-2 grid__item--Tablet-4-4 grid__item--Desktop-10-10">
+          <div class="nav
+          footer__nav-block
+          grid__item--2-2
+          grid__item--Tablet-4-4
+          grid__item--Desktop-10-10"
+          >
             <a href="#subscribe" class="nav__link">Про Нас</a>
+
             <a href="#contacts" class="nav__link">Контакти</a>
           </div>
         </div>
+
         <div class="footer__copywrite">
           <h3 class="footer__copywrite-text">Designed by Zhyriada Marina</h3>
+
           <h3 class="footer__copywrite-text">Copyright © 2019. All Rights Reserved.</h3>
         </div>
       </div>
