--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body class="page_body">
-    <header class="header page__section" hidden>
-      <div class="container">
-        <div class="header_nav">
-          <a href="#menu" class="icon"></a>
+    <header class="header page__section">
+      <div class="header__backgroundImg grid--desktop">
+        <div class="top-actions">
+          <a href="#menu" class="icon icon--menu"></a>
 
           <a href="#" class="logo">
             <img
@@ -35,14 +35,114 @@
           </a>
         </div>
 
+        <div class="container">
+          <div class="header__content">
+            <h1 class="header__title grid__item--1-2 grid__item--tablet-1-2">
+              ХУДОЖНІЙ МУЗЕЙ
+            </h1>
 
-        <h1 class="header__title">
-          ХУДОЖНІЙ МУЗЕЙ
-        </h1>
+            <div class="header__tickets grid__item--1-2">
+              <div class="header__tickets--field">КВИТКИ</div>
+
+              <a
+                class="header__tickets--button"
+                href="#"
+                target="_blank"
+              >
+                <img
+                  class="header__tickets--button-arrow"
+                  src="./images/arrow.svg"
+                  alt="arrow"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container container__mobile">
+        <div class="header__content grid">
+          <h1 class="header__title grid__item--1-2 grid__item--tablet-1-2">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+
+          <div class="header__tickets grid__item--1-2">
+            <div class="header__tickets--field">КВИТКИ</div>
+
+            <a
+              class="header__tickets--button"
+              href="#"
+              target="_blank"
+            >
+              <img
+                class="header__tickets--button-arrow"
+                src="./images/arrow.svg"
+                alt="arrow"
+              >
+            </a>
+          </div>
+        </div>
       </div>
     </header>
 
-    <main class="page__main">
+    <nav class="page__menu menu" id="menu"
+    hidden>
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-actions">
+            <a href="#" class="logo">
+              <img
+                class="logo__image"
+                src="./images/NAMU.png"
+                alt="NAMU logo">
+            </a>
+
+            <div class="top-actions--rightPart">
+              <a href="#" class="icon icon--cross"></a>
+            </div>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Про нас</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#currentEvents" class="menu__link">Актуальні події</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Підписатися</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+
+          </ul>
+
+          <!-- <a
+            href="tel:+1 234 5555-55-55"
+            class="menu__call menu__call--phone"
+          >
+          +1 234 5555-55-55
+          </a>
+
+          <a
+            href="tel:+1 234 5555-55-55"
+            class="menu__call menu__call--action"
+          >
+          Book a test ride
+          </a> -->
+        </div>
+      </div>
+    </nav>
+
+    <main class="page__main" hidden>
       <section
         class="page__section currentEvents"
         id="currentEvents"
@@ -234,182 +334,182 @@
           </div>
         </div>
       </section>
+    </main>
 
-      <footer class="footer">
-        <div class="footer__subscription">
-          <h2 class="footer__subscription--title">Підписка</h2>
+    <footer class="footer" hidden>
+      <div class="footer__subscription" id="subscription">
+        <h2 class="footer__subscription--title">Підписка</h2>
 
-          <p class="footer__subscription--paragraf">
-            Бути в курсі всіх актуальних подій та останніх новин.
-          </p>
+        <p class="footer__subscription--paragraf">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
 
-          <div class="footer__subscription--mail">
-            <input
-              class="footer__subscription--mail-input"
-              type="email"
-              placeholder="E-mail"
-              required>
+        <div class="footer__subscription--mail">
+          <input
+            class="footer__subscription--mail-input"
+            type="email"
+            placeholder="E-mail"
+            required>
 
-            <a class="footer__subscription--mail-button" href="#">
+          <a class="footer__subscription--mail-button" href="#">
+            <img
+              class="footer__subscription--mail-arrow"
+              src="./images/arrow.svg"
+              alt="arrow"
+            >
+          </a>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="grid footer__contacts" id="contacts">
+          <div
+            class="
+              footer__logoSocials
+              grid__item--1-2
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1
+            "
+          >
+            <a href="#">
               <img
-                class="footer__subscription--mail-arrow"
-                src="./images/arrow.svg"
-                alt="arrow"
+                class="footer__logoSocials--logo"
+                src="./images/NAMU.png"
+                alt="logo"
               >
             </a>
-          </div>
-        </div>
 
-        <div class="container">
-          <div class="grid footer__contacts">
-            <div
-              class="
-                footer__logoSocials
-                grid__item--1-2
-                grid__item--tablet-1-1
-                grid__item--desktop-1-1
-              "
-            >
-              <a href="#">
+            <div class="footer__logoSocials--socials">
+              <a href="https://www.facebook.com/">
                 <img
-                  class="footer__logoSocials--logo"
-                  src="./images/NAMU.png"
-                  alt="logo"
+                  class="footer__logoSocials--socials-facebook"
+                  src="./images/Facebook.png"
+                  alt="Facebook"
                 >
               </a>
 
-              <div class="footer__logoSocials--socials">
-                <a href="https://www.facebook.com/">
-                  <img
-                    class="footer__logoSocials--socials-facebook"
-                    src="./images/Facebook.png"
-                    alt="Facebook"
-                  >
-                </a>
-
-                <a href="https://www.instagram.com/">
-                  <img
-                    class="footer__logoSocials--socials-instagram"
-                    src="./images/instagram.png"
-                    alt="instagram"
-                  >
-                </a>
-              </div>
-            </div>
-
-            <div
-              class="
-                footer__contacts--schedule
-                grid__item--1-1
-                grid__item--tablet-2-3
-                grid__item--desktop-3-4
-              "
-            >
-              <p>
-                Графік роботи
-                <br>
-                <br>
-              </p>
-
-              <p class="footer__contacts--schedule-hours">
-                <strong>12:00 — 20:00</strong> середа<br>
-                <strong>12:00 — 20:00</strong> четвер<br>
-                <strong>12:00 — 20:00</strong> п’ятниця<br>
-                <strong>11:00 — 19:00</strong> субота<br>
-                <strong>11:00 — 19:00</strong> неділя<br>
-                <br>
-                <br>
-                Вихідні понеділок, вівторок
-                <br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
-            </div>
-
-            <div
-              class="
-                footer__contacts--contact
-                grid__item--2-2
-                grid__item--tablet-4-5
-                grid__item--desktop-5-6
-              "
-            >
-              <p>
-                Контакти:
-                <br>
-                <br>
-              </p>
-
-              <p>
-                <a class="footer__contacts--contact-address" href="https://goo.gl/maps/XASDZvWwfePSJiWX7">вул. М. Грушевського, 6; Київ, 01001</a><br>
-                тел. +38 (044) 278-13-57 <br>
-                факс +38 (044) 278-74-54 <br>
-                <a class="footer__contacts--contact-email" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
-              </p>
-            </div>
-
-            <a class="footer__contacts--up grid__item--2-2" href="#">
-              <div class="footer__contacts--up-round">
+              <a href="https://www.instagram.com/">
                 <img
-                  class="footer__contacts--up-arrow"
-                  src="./images/up.svg"
-                  alt="up"
+                  class="footer__logoSocials--socials-instagram"
+                  src="./images/instagram.png"
+                  alt="instagram"
                 >
-              </div>
-            </a>
-
-            <div
-              class="
-                footer__contacts--line
-                grid__item--1-2
-                grid__item--tablet-2-5
-                grid__item--desktop-7-7
-              "
-            >
-            </div>
-
-            <div
-              class="
-                footer__contacts--gallery
-                grid__item--tablet-2-3
-                grid__item--desktop-8-9
-              "
-            >
-              <p>
-                <a class="footer__contacts--gallery-gallery" href="#gallery">Галерея</a>
-                <br><br>
-                <a class="footer__contacts--gallery-show" href="#show">Виставки та події</a>
-              </p>
-            </div>
-
-            <div
-              class="
-                footer__contacts--about
-                grid__item--tablet-4-5
-                grid__item--desktop-10-11
-              "
-            >
-              <p>
-                <a class="footer__contacts--about-about" href="#about">Про Нас</a>
-                <br><br>
-                <a class="footer__contacts--about-contacts" href="#contacts">Контакти</a>
-              </p>
-            </div>
-
-            <div
-              class="
-                footer__contacts--bottom
-                grid__item--1-2
-                grid__item--tablet-1-6
-                grid__item--desktop-1-12
-              "
-            >
-              <p class="footer__contacts--bottom-1">Designed by Zhyriada Marina</p>
-              <p class="footer__contacts--bottom-2">Copyright © 2019. All Rights Reserved.</p>
+              </a>
             </div>
           </div>
+
+          <div
+            class="
+              footer__contacts--schedule
+              grid__item--1-1
+              grid__item--tablet-2-3
+              grid__item--desktop-3-4
+            "
+          >
+            <p>
+              Графік роботи
+              <br>
+              <br>
+            </p>
+
+            <p class="footer__contacts--schedule-hours">
+              <strong>12:00 — 20:00</strong> середа<br>
+              <strong>12:00 — 20:00</strong> четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя<br>
+              <br>
+              <br>
+              Вихідні понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div
+            class="
+              footer__contacts--contact
+              grid__item--2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-5-6
+            "
+          >
+            <p>
+              Контакти:
+              <br>
+              <br>
+            </p>
+
+            <p>
+              <a class="footer__contacts--contact-address" href="https://goo.gl/maps/XASDZvWwfePSJiWX7">вул. М. Грушевського, 6; Київ, 01001</a><br>
+              тел. +38 (044) 278-13-57 <br>
+              факс +38 (044) 278-74-54 <br>
+              <a class="footer__contacts--contact-email" href="mailto: info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </p>
+          </div>
+
+          <a class="footer__contacts--up grid__item--2-2" href="#">
+            <div class="footer__contacts--up-round">
+              <img
+                class="footer__contacts--up-arrow"
+                src="./images/up.svg"
+                alt="up"
+              >
+            </div>
+          </a>
+
+          <div
+            class="
+              footer__contacts--line
+              grid__item--1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-7-7
+            "
+          >
+          </div>
+
+          <div
+            class="
+              footer__contacts--gallery
+              grid__item--tablet-2-3
+              grid__item--desktop-8-9
+            "
+          >
+            <p>
+              <a class="footer__contacts--gallery-gallery" href="#gallery">Галерея</a>
+              <br><br>
+              <a class="footer__contacts--gallery-show" href="#show">Виставки та події</a>
+            </p>
+          </div>
+
+          <div
+            class="
+              footer__contacts--about
+              grid__item--tablet-4-5
+              grid__item--desktop-10-11
+            "
+          >
+            <p>
+              <a class="footer__contacts--about-about" href="#about">Про Нас</a>
+              <br><br>
+              <a class="footer__contacts--about-contacts" href="#contacts">Контакти</a>
+            </p>
+          </div>
+
+          <div
+            class="
+              footer__contacts--bottom
+              grid__item--1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-12
+            "
+          >
+            <p class="footer__contacts--bottom-1">Designed by Zhyriada Marina</p>
+            <p class="footer__contacts--bottom-2">Copyright © 2019. All Rights Reserved.</p>
+          </div>
         </div>
-      </footer>
-    </main>
+      </div>
+    </footer>
   </body>
 </html>
