--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
       rel="stylesheet"
     >
 
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="html__body">
@@ -41,7 +43,7 @@
         </div>
       </header>
 
-      <nav class="html__menu menu" id="menu">
+      <nav class="html__menu menu html__body--with-menu" id="menu">
         <div class="container">
           <div class="menu__content">
             <div class="top-actions">
@@ -57,15 +59,15 @@
 
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Актуальні події</a>
+                <a href="#now-on-view" class="menu__link">Актуальні події</a>
               </li>
 
               <li class="menu__item">
-                <a href="#about-us" class="menu__link">Галерея</a>
+                <a href="#gallery" class="menu__link">Галерея</a>
               </li>
 
               <li class="menu__item">
-                <a href="#now-on-view" class="menu__link">Підписка</a>
+                <a href="#subscr" class="menu__link">Підписка</a>
               </li>
 
               <li class="menu__item">
@@ -98,7 +100,6 @@
       <main class="page html__main">
         <section class="page__main main">
           <div class="main__container container">
-
             <div class="main__content">
               <h1 class="main__title">
                 Художній
@@ -108,12 +109,12 @@
 
               <div class="main__actions">
                 <div class="main__actions-text">КВИТКИ</div>
-                <a href="/" class="main__actions-link"></a>
+                <a href="#event" class="main__actions-link"></a>
               </div>
 
-              <div class="main__events">
+              <a href="#event" class="main__events">
                 ПОДІЇ
-              </div>
+              </a>
 
             </div>
 
@@ -124,22 +125,201 @@
             >
           </div>
         </section>
-        <section class="page__main subscr">
+
+        <section class="page__main" id="now-on-view">
+          <div class="container">
+            <h2 class="page__section-title">
+              Актуальні події
+            </h2>
+
+            <div class="place">
+              <div class="place__photos">
+                <div class="place__photo-container">
+                  <img
+                    src="./images/act1.png"
+                    alt="/"
+                    class="place__photo"
+                  >
+                </div>
+              </div>
+              <div class="place__description">
+                <div class="place__schedule">
+                  <div class="place__name">ВИСТАВКА</div>
+                  <div class="place__date">26.08-29.11.2019</div>
+                </div>
+                <div class="place__content">
+                  <div class="place__title-container">
+                    <div class="place__title">Йду і повертаюсь</div>
+                    <img
+                      src="./images/square.svg"
+                      alt="/"
+                      class="place__title-image"
+                    >
+                  </div>
+
+                  <div class="place__text">
+                    Національний Художній Музей України презентує унікальну частину колекції
+                    Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="place">
+              <div class="place__photos">
+                <img
+                  src="./images/act2.png"
+                  alt="/"
+                  class="place__photo"
+                >
+              </div>
+              <div class="place__description">
+                <div class="place__schedule">
+                  <div class="place__name">ВИСТАВКА</div>
+                  <div class="place__date">26.08-29.11.2019</div>
+                </div>
+                <div class="place__content">
+                  <div class="place__title-container">
+                    <div class="place__title">І спогади і мрії</div>
+                    <img
+                      src="./images/square.svg"
+                      alt="/"
+                      class="place__title-image"
+                    >
+                  </div>
+                  <div class="place__text">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці
+                    Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="page__main lecture" id="event">
+          <div class="lecture__image">
+            <div class="lecture__text">
+              <div class="lecture__schedule">
+                <div class="lecture__name">ЛЕКЦІЯ</div>
+                <div class="lecture__date">26/08/2019 - 11:00</div>
+              </div>
+              <div class="lecture__title">Від класицизму до романтизму</div>
+            </div>
+          </div>
+
+        </section>
+
+        <section class="page__main gallery" id="gallery">
+          <div class="container">
+            <h2 class="page__section-title">
+              Галерея
+            </h2>
+
+            <div class="gallery__place">
+              <div class="gallery__photos gallery__photos--1">
+                <div class="gallery__photo-container">
+                  <img
+                    src="./images/gal1.jpg"
+                    alt="/"
+                    class="gallery__photo"
+                  >
+                </div>
+
+                <div class="gallery__photo-container">
+                  <img
+                    src="./images/gal3.jpg"
+                    alt="/"
+                    class="gallery__photo"
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="gallery__place">
+              <div class="gallery__photos gallery__photos--2">
+                <div class="gallery__photo-container gallery__photo-container--2">
+                  <img
+                    src="./images/gal4.jpg"
+                    alt="/"
+                    class="gallery__photo"
+                  >
+                </div>
+
+                <div class="gallery__photo-container gallery__photo-container--2">
+                  <img
+                    src="./images/gal5.jpg"
+                    alt="/"
+                    class="gallery__photo"
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  class="swiper__image"
+                  src="./images/gal1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="swiper-slide">
+                <img
+                  class="swiper__image"
+                  src="./images/gal2.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="swiper-slide">
+                <img
+                  class="swiper__image"
+                  src="./images/gal3.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="swiper-slide">
+                <img
+                  class="swiper__image"
+                  src="./images/gal4.jpg"
+                  alt="image"
+                >
+              </div>
+
+              ...
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </section>
+
+        <section class="page__main subscr" id="subscr">
           <h1 class="subscr__title">Підписка</h1>
           <div class="subscr__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
-          <div class="subscr__form">
+          <form
+            action="#"
+            method="post"
+            id="non"
+            class="subscr__form"
+          >
             <input
                   name="email"
                   placeholder="Email"
                   type="email"
                   class="subscr__form-field"
+                  required
                 >
-            <a href="/" class="subscr__form-link"></a>
-          </div>
+            <button type="submit" class="subscr__form-link"></button>
+          </form>
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="contacts">
         <div class="container footer__hider">
           <div class="footer__container">
             <div class="footer__logos">
@@ -151,8 +331,17 @@
                 >
               </a>
               <div class="footer__icons">
-                <a href="/" class="icon icon--fb"></a>
-                <a href="/" class="icon icon--inst"></a>
+                <a
+                  href="https://www.facebook.com/namu.museum/"
+                  class="icon icon--fb"
+                  target="_blank"
+                ></a>
+
+                <a
+                  href="https://www.instagram.com/namu.museum/?fbclid=IwAR3eUw3HiPYYl9cXkETHxEQD6PUrmTEh3yPr0nhKO5POONMiJI7BDIFc-q8"
+                  class="icon icon--inst"
+                  target="_blank"
+                ></a>
               </div>
             </div>
 
@@ -189,14 +378,22 @@
 
               <div class="footer__section">
                 <div class="footer__section-name">Контакти:</div>
-                <p class="footer__adress">
-                  вул. М. Грушевського, 6; Київ, 01001
-                  <br>
+                <a
+                  href="https://goo.gl/maps/iRgAt3XfHMRd1Any8"
+                  class="footer__adress"
+                  target="_blank"
+                >
+                 вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="footer__adress"
+                  target="_blank"
+                >
                   тел. +38 (044) 278-13-57
                   факс +38 (044) 278-74-54
-                  <br>
+                </a>
                   e-mail: info@namu.kiev.ua
-                </p>
               </div>
             </div>
           </div>
@@ -208,12 +405,12 @@
 
           <div class="footer__nav">
             <div class="footer__nav-1">
-              <a href="/" class="footer__nav-item">Галерея</a>
-              <a href="/" class="footer__nav-item">Виставки та події</a>
+              <a href="#gallery" class="footer__nav-item">Галерея</a>
+              <a href="#now-on-view" class="footer__nav-item">Виставки та події</a>
             </div>
             <div class="footer__nav-2">
-              <a href="/" class="footer__nav-item">Про Нас</a>
-              <a href="/" class="footer__nav-item">Контакти</a>
+              <a href="#" class="footer__nav-item">Про Нас</a>
+              <a href="#contacts" class="footer__nav-item">Контакти</a>
             </div>
           </div>
 
@@ -224,6 +421,8 @@
         </div>
       </footer>
     </div>
+
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
